tests/ui/formatter/fail/uppercase_pointer.rs
// SPDX-FileCopyrightText: 2025 RAprogramm <andrey.rozanov.vl@gmail.com>
//
// SPDX-License-Identifier: MIT

use masterror::Error;

#[derive(Debug, Error)]
#[error("{value:P}")]
struct UppercasePointer {
    value: *const u8,
}

fn main() {}
